Creation of the endpoint to get all content.

--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,8 @@ services:
 
   myapidb:
     image: mariadb
+    ports:
+    - "3306:3306"
     environment:
       MARIADB_ROOT_PASSWORD: root
       MARIADB_USER: myapi
